WIP: Comprehensive upgrade for modern versions of Java, FDB, and JanusGraph